[package]
name = "extracterrr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-std = "0.4.0"
rand = "0.8"
ark-bn254 = "0.4.0"
rand_core = "0.6.4"
nova-snark = {path = "../Nova"}
ff = { version = "0.12.0", features = ["derive"] }
pasta_curves = { version = "0.5.2", features = ["repr-c", "serde"], package = "fil_pasta_curves" }
bellperson = { version = "0.24", default-features = false }